Fix flash of stretched images

--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -19,10 +19,8 @@
 }
 
 .c-card__image {
-    width: 100%;
-    height: 160px;
+    height: auto;
     background-color: var(--color-grey-500); // fallback while image is loading
-    object-fit: cover;
     border-radius: 20px 20px 0 0;
 }
 
